# scanbdpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  doxygen.conf
cmake/: FindConfuse.cmake  FindDBusCpp.cmake  FindSane.cmake  FindUDev.cmake
conf/: scanbd.conf  scanbd.conf.bsd
conf/scanner.d/: avision.conf  canon.conf  fujitsu.conf  hp.conf  pixma.conf  plustek.conf  snapscan.conf  test.conf
include/: common.h  config.h  daemonize.h  defines.h  device_events.h  pipe.h  queue.h  run_configuration.h  sane.h  signal_handler.h  udev.h
scripts/: copy.script  example.script  scanadf.script  test.script
src/: config.cpp  daemonize.cpp  device_events.cpp  main.cpp  pipe.cpp  queue.cpp  run_configuration.cpp  sane.cpp  scanbdpp.cpp  signal_handler.cpp  udev.cpp
