cmake_minimum_required(VERSION 3.6.2)
project(scanbdpp C CXX)
set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
add_compile_options(-Wall -Wextra -Wpedantic -g)
add_definitions(-std=c++17)
add_definitions(-DSANED_PATH="sane")
add_definitions(-DSCANBD_CFG_DIR="/etc/scanbd/")

add_subdirectory(external/confusepp)
add_subdirectory(external/sanepp)
add_subdirectory(external/udevpp)
add_subdirectory(external/cxxopts)

file(GLOB ALL_SOURCE_FILES "src/*cpp")
add_executable(scanbdpp ${ALL_SOURCE_FILES})
target_include_directories(scanbdpp PRIVATE include)

target_link_libraries(scanbdpp PRIVATE confusepp)
target_link_libraries(scanbdpp PRIVATE sanepp)
target_link_libraries(scanbdpp PRIVATE udevpp)
target_link_libraries(scanbdpp PRIVATE cxxopts)
target_link_libraries(scanbdpp PRIVATE pthread)
target_link_libraries(scanbdpp PRIVATE stdc++fs)
target_link_libraries(scanbdpp PRIVATE rt)
